@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.2 2004/03/08 10:11:17 tron Exp $
+# $NetBSD: Makefile,v 1.3 2004/03/26 02:27:47 wiz Exp $
 
 .include "${.CURDIR}/../gftp/Makefile.common"
 
 PKGNAME=	gftp-gtk1-${VERSION}
-PKGREVISION=	1
 COMMENT=	Multithreaded GTK+ ftp client
 
 DEPENDS+=	gnome1-dirs>=1.0:../../misc/gnome1-dirs
