@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.17 2004/03/08 19:40:41 jmmv Exp $
+# $NetBSD: Makefile,v 1.18 2004/03/26 02:27:47 wiz Exp $
 #
 
 .include "${.CURDIR}/Makefile.common"
-PKGREVISION=	4
 
 COMMENT=	Multithreaded GTK2+ ftp client
 
